--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
 }
 
@@ -10,7 +9,9 @@ body{
     width: 100%;
     min-height: 100vh;
     min-width: 100%;
+    font-family: 'Nunito Sans', sans-serif;
     overflow: hidden;
+
 
 }
 .home-page{
@@ -52,6 +53,7 @@ body{
     align-items: center;
     justify-content:space-between;
     padding: 0em 13em;
+    font-family: 'Exo', sans-serif;
 
 }
 .home-page nav #right{
